<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="28sp"
        android:text="@string/app_name_main" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginVertical="24dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_sound" />

    <Button
        android:id="@+id/profile_button_main"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:layout_gravity="center"
        android:text="@string/profile_button_main"/>

    <Button
        android:id="@+id/library_button_main"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/library_button_main"/>

</LinearLayout>